Se agrego resumen de unidad 3 de Autómatas

--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -16,7 +16,7 @@ El SO se encarga, entre otras cosas:
 - Cuida que no se sobreescriba información sobre sí mismo y sobre los otros programas que se encuentran en memoria principal. Posee el rol de protector.
 
 >[!important] Interrupciones
->El hardware puede activar una interrupción en cualquier instante enviando una señal a la CPU, normalmente a través del bus del sistema, mientras que el software puede activar una interrupción ejecutando una operación especial denominada **llamada del sistema** (o llamada de monitor). Se puede seguir especificando el arranque, pero hasta acá está bien.
+>El hardware puede activar una interrupción en cualquier instante enviando una señal a la CPU, normalmente a través del bus del sistema, mientras que el software puede activar una interrupción ejecutando una operación especial denominada **llamada del sistema** (o llamada de monitor).
 
 ---
 
@@ -56,7 +56,6 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 
 #### Datos a Tener en Cuenta
 
-- El disco rígido solo atiende una consulta a la vez.
 - Los procesos del SO son los que cuentan con prioridad más alta, pero existe un concepto de equidad para los procesos, con el cual un proceso de prioridad baja se va a ejecutar en un tiempo considerablemente bueno, sin importar que existan otras tareas con más prioridad. Para que esto sea así el mismo SO en cada ciclo aumenta en una la prioridad de todas las actividades pendientes a realizar.
 - El So debe defender el ***grado de Multiprogramación***, es decir, el SO debe tener la mayor cantidad de procesos corriendo, pero al mismo tiempo tiene que asegurarse que los recursos que ocupen dichos procesos sean más o menos los mismos.
 
@@ -86,7 +85,7 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 
 #### Estructuras Monolíticas
 
-Están constituidos por un solo programa, compuesto a su vez por módulos entrelazados entre sí, de manera que cada módulo puede llamar a otros.
+Están constituidos por un solo programa, compuesto a su vez por módulos enlazados entre sí, de manera que cada módulo puede llamar a otros.
 
 - Este tipo de programas carecen de protección y privilegio a la hora de entrar en rutina.
 - Carecen de flexibilidad para soportar diferentes ambientes.
@@ -97,8 +96,6 @@ Se dividió el sistema operativo en pequeñas partes, de tal forma que cada una 
 
 >[!note] Protección de CPU
 >Los tiempos que se le asignan a cada tarea cumplen la función de cuidar que el procesador no ejecute siempre los procesos de las aplicaciones de mas prioridad, a su vez para que esto sea posible todas las tareas deben ser capas de terminarse y/o  interrumpirse para que esta no se apropie de todos los recursos.
-
----
 
 #### Máquinas Virtuales
 
@@ -121,11 +118,13 @@ Existen dos tipos de máquinas virtuales:
 
 Se traslada código a capas superiores dejando un núcleo o kernel mínimo. La mayor parte de las funciones del sistema operativo se convierten en procesos de usuario. Por ejemplo, librerías o archivos ***.dll*** de SO Windows.
 
+---
+
 #### Por Lote
 
 Ejecuta trabajos o jobs por lotes. La CPU en las esperas de entradas/salidas no hace nada, ya que esta solo puede ocuparse de una tarea hasta que esta finalizó
 
-## Multiprogramación
+#### Multiprogramación
 
 El procesador tiene más de un proceso para ejecutar. La secuencia de ejecución de estos mismos se determinan de acuerdo a la ***prioridad del proceso*** o espera de E/S. El SO selecciona un proceso y lo comienza a ejecutar, si hay una espera por E/S, el SO
 seleccionará otro proceso y lo ejecutará. Cuando el primer proceso termine su espera,
@@ -136,8 +135,8 @@ obtendrá el procesador nuevamente. Siempre se ejecuta un proceso por procesador
 Utiliza ***calendarización de CPU y multiprogramación*** para proporcionar a cada usuario una pequeña porción de tiempo (quántum), dándoles la impresión de que cada uno de ellos tiene el control absoluto de la computadora, mientras que en realidad es compartida entre muchos usuarios.
 
 >[!important] El Quantum
->En un Sistema Operativo de ***tiempo compartido***, el procesador cada vez que comienza a ejecutar una tarea  inicializa un cronometro de 10mseg a esto se le denomina ***quantum***, si una tarea demora mas de ese tiempo se interrumpe y pasa a la siguiente, asi sucesivamente.
->- En el caso de que se esten ejecutando tareas de un programa en específico y una tarea tarda mas 10mseg se interrumpe la ejecución y el procesador se dirije un stack de tareas y toma la primera tarea y la ejecuta asi sucesivamente.
+>En un Sistema Operativo de ***multiprogramación***, el procesador cada vez que comienza a ejecutar una tarea inicializa un cronómetro de 10mseg a esto se le denomina ***quantum***, si una tarea demora más de ese tiempo se interrumpe y pasa a la siguiente, así sucesivamente.
+>- En el caso de que se estén ejecutando tareas de un programa en específico y una tarea tarda más 10mseg se interrumpe la ejecución y el procesador se dirige una cola de tareas y toma la primera tarea y la ejecuta así sucesivamente.
 
 #### Multiproceso
 
@@ -170,14 +169,14 @@ En este tipo de sistemas, el equipo base cuenta con más de un procesador en don
 >
 > Un ejemplo de esto seria la siguiente ruta en Windows-> ***C:\ user\ home\ archivo.txt*** como se puede ver el archivo consta de dos partes, la primera es el nombre que posee el archivo y la segunda la extención del mismo, la cual nos sirve para que el sistema operativo pueda detectar con que aplicación abrir el archivo si es que se dea ver su contenido.
 
-1. **Asignación de Recursos**
+7. **Asignación de Recursos**
 	- Cuando existen múltiples usuarios ejecutando múltiples tareas al mismo tiempo, los recursos deben ser asignados para que cada tarea satisfaga sus requerimientos de ellos.
-2. **Administración de los Procesos**
+8. **Administración de los Procesos**
 	- Crear y Destruir procesos.
 	- Suspender y reanudar procesos.
 	- Proveer mecanismos para la sincronización de procesos.
 	- Proveer mecanismos para la comunicación entre procesos.
-3. **Administración de Memoria**
+9. **Administración de Memoria**
 	- Asignar y des asignar espacio de memoria cuando se requiera.
 	- Mantener información de los procesos en memoria y sus propietarios.
 
