Se corrigieron palabras

--- a/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/1. Introducción y Conceptos.md
@@ -7,7 +7,7 @@ Un punto de vista ligeramente diferente de un SO es de un programa de control, y
 >El SO tiene la capacidad de hacerse un automantenimiento y esquivar los posible errores que se puedan producir, pero eso ocupa recursos y hará que este mismo sea más lento; esto se debe a que se cargarán en memoria principal los módulos necesarios para realizar el mantenimiento y se iniciaran nuevas tareas de prioridad más alta a la que están corriendo haciendo que a vistas del usuario todo funcione más lento.
 
 >[!info] Los Drivers y El SO
->Los drivers se cargan al mismo tiempo que el sistema operativo, ya que es el SO es el que en realidad va a utilizarlos para comunicarse con el resto de perifericos o dispositivos E/S devido a que estos son una interfaz que establece como nos vamos a comunicar con los otros componentes de hardware, a su vez estos son necesarios ya que estos abstraen la arquitectura de los diferentes componentes que integran el equipo. Eso si solo se cargan los drivers que el sistema necesita, es decir, los de los componentes que el equipo posee.
+>Los drivers se cargan al mismo tiempo que el sistema operativo, ya que es el SO es el que en realidad va a utilizarlos para comunicarse con el resto de periféricos o dispositivos E/S debido a que estos son una interfaz que establece como nos vamos a comunicar con los otros componentes de hardware, a su vez estos son necesarios, ya que estos abstraen la arquitectura de los diferentes componentes que integran el equipo. Eso sí, solo se cargan los drivers que el sistema necesita, es decir, los de los componentes que el equipo posee.
 
 El SO se encarga, entre otras cosas:
 - Organizar la memoria.
@@ -39,7 +39,7 @@ Los sistemas informáticos se pueden dividir en 4 componentes:
 En primera instancia, con los tubos de vacío, no existía como tal el concepto de sistema operativo, lo que se hacía era escribir tu programa en tarjetas perforadas y el computador ejecutaba esas instrucciones. Con la aparición del transistor y la posibilidad de crear máquinas más rápidas y complejas surge el primer sistema operativo, los cuales solo podían ejecutar un programa a la vez.
 Con la invención de los primeros chips, los SO adquirieron nuevas prestaciones y responsabilidades, se establece el concepto de multiprogramación, lo que le permitió a las computadoras ejecutar múltiples programas al mismo tiempo, esto agregó una nueva responsabilidad al SO, ya que es él quien debe cuidar que ningún programa se superponga a otro. Al mismo tiempo surgen los sistemas de tiempo compartido, en el cual teníamos múltiples usuarios ejecutando distintos programas.
 
->[!info] Pocisiones Logicas y Fisicas
+>[!info] Posiciones Lógicas y Físicas
 >La posición lógica 0 cambia cuando se carga el sistema operativo, ya que todos los programas compilados arrancan desde la posición lógica 0, si no cambiara el valor se podría llegar a sobreescribir el SO.
 >- Cada programa compilado va a indicar que donde se tiene que cargar es en la pocisión 0, por eso este debe ser cambiado.
 >
@@ -60,7 +60,7 @@ Más recientemente surge el concepto de sistemas distribuidos, estos son un conj
 - El So debe defender el ***grado de Multiprogramación***, es decir, el SO debe tener la mayor cantidad de procesos corriendo, pero al mismo tiempo tiene que asegurarse que los recursos que ocupen dichos procesos sean más o menos los mismos.
 
 >[!note] Para Cuando Demos Procesos
->Cuando un proceso es interrumpido por culpa de una instrucción de entrada salida que esta en su rutina, el procesador salta a otro proceso y descarta todas las instrucciones siguintes de ese proceso.
+>Cuando un proceso es interrumpido por culpa de una instrucción de entrada salida que esta en su rutina, el procesador salta a otro proceso y descarta todas las instrucciones siguientes de ese proceso.
 >Pero guarda el ***program counter (PC)***, para que cunado el procesador retone la rutina de ese proceso, la retome desde el mismo lugar en donde la dejo la ulti a vez
 
 ---
@@ -164,10 +164,10 @@ En este tipo de sistemas, el equipo base cuenta con más de un procesador en don
 	- Los Sistemas de Archivos permiten el almacenamiento de la información en forma estructurada, utilizando dispositivos de almacenamiento secundario.
 
 >[!important] Rutas y Archivos
->Las rutas para el sistema de archivos constan de los siguientes comonentes:
+>Las rutas para el sistema de archivos constan de los siguientes componentes:
 >- ***Nombre de la unidad + Nombre Directorio + Nombre Archivo***.
 >
-> Un ejemplo de esto seria la siguiente ruta en Windows-> ***C:\ user\ home\ archivo.txt*** como se puede ver el archivo consta de dos partes, la primera es el nombre que posee el archivo y la segunda la extención del mismo, la cual nos sirve para que el sistema operativo pueda detectar con que aplicación abrir el archivo si es que se dea ver su contenido.
+> Un ejemplo de esto sería la siguiente ruta en Windows-> ***C:\ user\ home\ archivo.txt*** como se puede ver el archivo consta de dos partes, la primera es el nombre que posee el archivo y la segunda la extensión del mismo, la cual nos sirve para que el sistema operativo pueda detectar con qué aplicación abrir el archivo si es que se deba ver su contenido.
 
 7. **Asignación de Recursos**
 	- Cuando existen múltiples usuarios ejecutando múltiples tareas al mismo tiempo, los recursos deben ser asignados para que cada tarea satisfaga sus requerimientos de ellos.
@@ -216,7 +216,7 @@ Estas llamadas se puede agrupar en:
 >7. Preparar valores a retornar.
 >8. Modo usuario + Restaurar contexto.
 
-- **Gestión de Excepciones (llamada de software)**:  Son condiciones de error que, el procesador reconoce como excepciones, es una interrupción generada por software, que es causada por un error al momento de ejecutar una instrucción. Por Ej.: una divicion por 0 o el intento de ejecución de una instrucción ilegal. Este tipo de eventos es sincrónico, ya que siempre tardaran el mismo tiempo en devolver el mando al programa.
+- **Gestión de Excepciones (llamada de software)**:  Son condiciones de error que, el procesador reconoce como excepciones, es una interrupción generada por software, que es causada por un error al momento de ejecutar una instrucción. Por Ej.: una división por 0 o el intento de ejecución de una instrucción ilegal. Este tipo de eventos es sincrónico, ya que siempre tardaran el mismo tiempo en devolver el mando al programa.
 - **Interrupción de Entrada/Salida (llamada de hardware)**: El proceso que solicitó la E/S, queda en espera hasta que se termine la operación solicitada, mientras que el procesador seguirá ejecutando otros procesos. Este tipo de interrupciones son asíncronas, ya que no se sabe el tiempo que va a tardar en devolver la información que se le solicito.
 
 >[!note] Excepciones
