Se agrego el materia de las filminas a la unidad 5 de Metodología

--- a/3° Año/Metodología de Sistemas I/Unidad 5/1. Análisis Estructurado.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 5/1. Análisis Estructurado.md
@@ -1,7 +1,12 @@
-
 ## ¿Qué es el Análisis Estructurado?
 
-El análisis estructurado es un método para el análisis de sistemas manuales y automatizados, que conduce al desarrollo de especificaciones para sistemas nuevos o para efectuar modificaciones a los ya existentes. El objetivo que persigue el análisis estructurado es el de organizar las tareas asociadas con la determinación de requerimientos para obtener la comprensión completa y exacta de una situación dada. A partir de aquí se determinan los requerimientos que serán la base de un sistema nuevo o modificado.
+El análisis estructurado es un método para el análisis de sistemas manuales y automatizados, que conduce al desarrollo de especificaciones para sistemas nuevos o para efectuar modificaciones a los ya existentes. A partir de aquí se determinan los requerimientos que serán la base de un sistema nuevo o modificado.
+Se fundamenta en el uso de técnicas, herramientas de desarrollo y documentación, fundamentalmente gráficas que facilitan el análisis, el diseño y la programación.
+
+>[!tldr] Objetivos del Análisis Estructurado
+>- El análisis estructurado organiza las tareas asociadas con la determinación de requerimientos para obtener la comprensión completa y exacta de una situación dada.
+>- Estructurar todo el sistema de forma simple y entendible, incluyendo todos los detalles relevantes que describen al sistema.
+>- Facilitar la comunicación en el proceso de desarrollo de un sistema de información.
 
 ### Componentes del Análisis Estructurado
 
@@ -9,4 +14,3 @@ El análisis estructurado es un método para el análisis de sistemas manuales y
 2. **Diccionario de Datos**: Descripción de todos los datos utilizados en el sistema.
 3. **Descripciones de Procesos y procedimientos**: Declaraciones formales que emplean técnicas y lenguajes que permiten a los analistas describir actividades importantes que forman parte del sistema.
 4. **Reglas**: Estándares para describir y documentar el sistema de forma correcta y completa.
-
