--- a/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 5/2. Análisis de Flujo de Datos.md
@@ -1,31 +1,97 @@
-El análisis de flujo de datos estudia para qué se utilizan los datos en cada actividad de una determinada organización. Documentando los hallazgos con diagramas de flujo de datos que muestran de forma gráfica la relación entre procesos y datos, y en los diccionarios de datos que describen de manera formal los datos del sistema y los sitios donde se utilizan.
-Los componentes de la estrategia de flujo de datos abarca tanto la determinación de los requerimientos como al diseño de sistemas. Contar con una notación bien establecida facilita la documentación del sistema y su análisis, por parte de todos los integrantes del proceso de determinación de requerimientos.
+Las principales herramientas que compone al análisis estructurado son las siguientes:
 
-### Herramientas de la Estrategia de Flujo de Datos
+- **Diagrama de Flujo de Datos (DFD)**
+- **Diccionario de Datos (DD)**
+- **Diagrama Entidad-Relación (DER)**
+- **Diagrama de Transiciones de estados (DTE)**
 
-1. **Diagrama de Flujo de Datos**: Herramienta gráfica que se emplea para describir y analizar el movimiento de datos a través de un sistema, incluyendo tanto a los procesos que se realizan sobre estos datos, como el lugar donde se almacenan y los retrasos. Este diagrama es la base sobre la cual se desarrollan los otros componentes.
-2. **Diccionario de Datos**: Contiene todas las características lógicas de los sitios donde se almacenan los datos del sistema, incluyendo nombre, descripción, alias, contenido y organización. También identifica los procesos donde se emplean los datos y los sitios donde se necesita el acceso inmediato a la información. Sirve como punto de partida para identificar los requerimientos de las bases de datos durante el diseño del sistema.
-3. **Diagrama de Estructura de Datos**: Este diagrama es una descripción de la relación entre las entidades de un sistema y el conjunto de información relacionada con la entidad.
-4. **Gráfica de Estructura**: Herramienta de diseño que muestra con símbolos la relación entre los módulos de procesamiento y el software de la computadora. Describe la jerarquía de los módulos componentes y los datos que serán transmitidos entre ellos. Incluye el análisis de las transformaciones entrada-salida y el análisis de transacciones.
+Estas herramientas de modelado nos permiten concentrarnos en las propiedades importantes del sistema y al mismo tiempo quitar atención a otras menos importantes.  A la vez que nos permite discutir cambios y correcciones de los requerimientos del usuario, a bajo costo y con el mínimo riesgo. También resulta muy útil para verificar que se comprenda correctamente el ambiente del usuario.
 
-### Notación
+---
+
+## Diagrama de Flujo de Datos
+
+El análisis de flujo de datos se utilizan para describir y analizar el movimiento de los datos en cada actividad de una determinado sistema. Documentando de forma gráfica la relación entre procesos y datos, y en los diccionarios de datos que describen de manera formal los datos del sistema y los sitios donde se utilizan.
+Este tipo de diagrama solo especifica que es lo que hace el sistema, no el como lo lleva a cabo, es decir, solo modela sus funciones. Al ser un modelo gráfico es comprensible incluso por los usuarios, lo que lo hace muy conveniente de usar para cualquier nivel de especificación.
+
+#### Notación
 
 Los métodos para el análisis de flujo de datos fueron desarrollados y promovidos por la compañía ***Yourden Inc***. y por el trabajo de Cristopher Gane y Trish Sarson, dos científicos de la computación conocidos por crear el "*data flow diagrams*".
 Los diagramas lógicos de flujo de datos se pueden dibujar con sólo cuatro notaciones sencillas, lo único que va a variar de un modelo a otro es los iconos que se utilizan para representar cada una de las partes.
 
 1. **Flujo de datos**: Movimiento da datos en determinada dirección desde un origen hacia un destino, en forma de documento, carta, llamada telefónica o virtualmente por cualquier medio. El flujo de datos es un *paquete* de datos.
 
-<span class="centerImg"> ![[MS-flujo-datos.png]] </span>
+![[MS-flujo-datos.png]]
+
+A la hora de realizar diagramar los flujos de datos hay que tener en cuenta una serie de restricciones, ya que las entidades en un diagrama de flujo de datos solo pueden interactuar según lo indica la siguiente tabla:
+
+![[MS-tabla-relaciones.png]]
 
 2. **Procesos**: Personan, procedimientos o dispositivos que utilizan o producen datos. No se identifica el componente físico.
 
-<span class="centerImg"> ![[MS-procesos.png]] </span>
+![[MS-procesos.png]]
 
 3. **Fuente o Destinatario de Datos**: Fuente o destinatario externo de datos que pueden ser personas, programas, organizaciones o cualquier otra entidad que interactúa con el sistema.
 
-<span class="centerImg"> ![[MS-fuente-destino-datos.png]] </span>
+![[MS-fuente-destino-datos.png]] 
 
 4. **Almacenamiento de Datos**: Es el lugar donde se aguardan los datos o al que se referencia los procesos del sistema. El almacenamiento de datos puede representar dispositivos tanto computarizados como no.
 
-<span class="centerImg"> ![[MS-amacenamieto-datos.png]] </span>
+![[MS-amacenamieto-datos.png]]
 
+## Diagrama de Contexto
+
+Tiene como objetivo delimitar la frontera entre el sistema con el mundo exterior, y definir sus interfaces, es decir, el flujos de datos de entrada y salida del sistema con el entorno o contexto.
+En este tipo de diagramas el 100% del sistema se representa como un proceso que interactúa con las distintas entidades externas, no aparecen ningún tipo de almacenamiento o demás procesos que conforman el sistema.
+A este diagrama también suelen llamarlo ***diagrama de nivel 0***, a medida que se van especificando cada vez más al proceso que representa el sistema estaríamos en presencia de una explosión de procesos, lo que haría que ese diagrama de nivel 0, se transforme en uno de nivel 1. A medida que se van especificando más estos procesos iremos subiendo mas de nivel.
+
+![[MS-explosion-procesos.png]]
+
+Un diagrama de contexto no es nada mas que una versión mas simplificada de un diagrama de caso de uso, con la diferencia que este resulta más útil para poder observar las diferentes interacciones entre el sistema y las entidades externas.
+
+>[!tldr] Aspectos a Tener en Cuenta
+>1. Un proceso debe recibir por lo menos un flujo de datos entrante y debe generar por lo menos un flujo de datos saliente.
+>2. Un almacén de datos debe estar conectado con por lo menos un proceso.
+>3. Todos los flujos de datos tienen un nombre que refleja los datos que fluyen entre procesos, almacenes de datos, fuentes o destinos.
+>4. Los procesos siempre están en continua ejecución, no se inician ni tampoco se detienen. Se debe suponer que un proceso está listo para ejecutar su trabajo.
+>5. En lo posible, tratar de asignar nombres representativos a las distintas entidades de un DFD.
+
+## Diccionario de Datos
+
+Es un listado organizado de todos los datos del sistema, con definiciones precisas y rigurosas para ser consultadas tanto por el personal afectado al proyecto como así también por los usuarios del mismo.
+Estos diccionarios describen el significado de los flujos y almacenes que se muestran en los ***Diagramas de Flujo de Datos*** y la composición de los paquetes de datos que se mueven a lo largo de los flujos de datos. Cada dato incluye en su definición comentarios, su composición y los valores que puede tomar.
+
+>[!example] Notación
+>- **=** significa "Esta compuesto de".
+>- **+** significa "y"
+>- **{ }** indica elementos repetidos
+>- **\[ \]** representan una situación disyuntiva. Puede estar presente un elemento u otro, pero no ambos.
+>- **( )** repesentan un elemento opcional.
+>- **@** indicador de campo clave de un almacén de datos.
+>- **\*\*** se utilizan para representar comentarios.
+>- **|** separa opciones alternativas.
+
+Dentro de un diccionario de datos encontramos cuatro categorías para su mayor comprensión:
+
+- Definición de los flujos de datos.
+- Descripción de las estructuras de datos.
+- Elementos de datos.
+- Almacenes de datos.
+
+## Diagrama Entidad-Relación
+
+El Diagrama Entidad-Relación (E-R) es un modelo de red que describe con un alto nivel de abstracción la distribución de datos almacenados en un sistema. Consta de 2 componentes principales:
+
+- **Tipos de objetos**: representan una colección o conjunto de objetos (cosas) del mundo real cuyos miembros juegan algún papel en el desarrollo del sistema, están descritos por uno o más atributos.
+- **Relaciones**: definen las asociaciones entre los tipos de objetos que están conectados con la relación por medio de flechas.
+
+![[MS-DER.png]]
+
+La notación sigue la misma lógica que la de un diagrama UML, por ejemplo esa gráfica se leería de la siguiente manera: muchos empleados pertenecen a un solo departamento. O de forma inversa un empleado puede pertenecer solo a un departamento
+
+### Diagrama de Transición de Estados
+
+Describen el comportamiento dependiente del tiempo, es decir, la secuencia con la cual se hará el acceso a los datos y se ejecutarán las funciones de un sistema.
+Este aspecto es muy importante para sistemas que tienen complejas relaciones con el tiempo, como por ejemplo en el caso de los sistemas en tiempo real. Para que se realíze una transición de un estado a otro se deben cumplir una o más condiciones asociadas con cada cambio de estado, y una o más (o tal vez ninguna) acciones, es decir, respuestas, salidas o actividades que se llevan a cabo como parte del cambio de estado.
+
+![[MS-DTE.png]]
